--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,11 @@
     <string name="text_ducks">Ducks</string>
     <string name="text_player">Player name</string>
 
+    <string name="text_new_game">New Game</string>
+    <string name="text_play_online">Play Online</string>
+    <string name="text_close">Close</string>
+
+
 </resources>
 
 
